--- a/public/index.ejs
+++ b/public/index.ejs
@@ -10,8 +10,6 @@
 <body>
     <h1>Hello World</h1>
     <div id="root"></div>
-
-    <script src="/assets/vendors~main.chunk.js"></script>
-    <script src="/assets/main.bundle.js"></script>
+    <script src="/assets/scripts/scripts.js"></script>
 </body>
 </html>
